working on color grid

--- a/index.html
+++ b/index.html
@@ -1700,6 +1700,188 @@
                     <div class="row">
                         <h5 class="heavy">Microsoft is a colorful brand. Our brand colors are our preferred range. Using this palette builds familiarity and recognition. White, black, and gray are preferred for text and backgrounds. Don't sample or use the automated color conversion tools in your software. Each color has been optimized for on-screen (RGB or hex) or print reproduction (CMYK or PMS). Specify the exact color formulas for accurate reproduction.</h5>
                     </div>
+                    <div class="row">
+                        <div class="half">
+                            <div class="half">
+                                <span class="swatch" style="background: #ffb900;">Aa</span>
+                                <p>Yellow</p>
+                                <p class="upper">
+                                    R255 G185 B0<br>
+                                    Hex #FFB900<br>
+                                    C0 M25 Y100 K0<br>
+                                    PMS 124 C, 7406 U
+                                </p>
+                            </div>
+                            <div class="half">
+                                <span class="swatch white" style="background: #d83b01;">Aa</span>
+                                <p>Orange</p>
+                                <p class="upper">
+                                    R216 G59 B1<br>
+                                    Hex #D83B01<br>
+                                    C0 M75 Y100 K0<br>
+                                    PMS 166
+                                </p>
+                            </div>
+                        </div>
+                        <div class="half">
+                            <div class="thirds">
+                                <div class="single">
+                                    <span class="swatch" style="background: #ffffff;">Aa</span>
+                                    <p>White</p>
+                                    <p class="upper">
+                                            R255 G255 B255<br>
+                                            Hex #FFFFFF<br>
+                                            C0 M0 Y0 K0
+                                    </p>
+                                </div>
+                            </div>
+                            <div class="thirds">
+                                <div class="single">
+                                    <span class="swatch white" style="background: #000000;">Aa</span>
+                                    <p>Rich Black</p>
+                                    <p class="upper">
+                                        R0 G0 B0<br>
+                                        Hex #000000<br>
+                                        C33 M33 Y33 K100
+                                    </p>
+                                </div>
+                            </div>
+                        </div>
+                        <!-- <div class="thirds">
+                            <div class="single">
+                                <span class="swatch" style="background: #ffffff;">Aa</span>
+                                <p>White</p>
+                                <p class="upper">
+                                        R255 G255 B255<br>
+                                        Hex #FFFFFF<br>
+                                        C0 M0 Y0 K0
+                                </p>
+                            </div>
+                            <div class="single">
+                                <span class="swatch white" style="background: #000000;">Aa</span>
+                                <p>Rich Black</p>
+                                <p class="upper">
+                                    R0 G0 B0<br>
+                                    Hex #000000<br>
+                                    C33 M33 Y33 K100
+                                </p>
+                            </div>
+                        </div> -->
+                    </div>
+                    <div class="row"></div>
+                    <div class="row">
+                        <div class="half">
+                            <div class="half">
+                                <span class="swatch white" style="background: #107c10;">Aa</span>
+                                <p>Green</p>
+                                <p class="upper">
+                                    R16 G124 B16<br>
+                                    Hex #107C10<br>
+                                    C75 M0 Y100 K0<br>
+                                    PMS 362
+                                </p>
+                            </div>
+                            <div class="half">
+                                <span class="swatch white" style="background: #0078d7;">Aa</span>
+                                <p>Blue</p>
+                                <p class="upper">
+                                    R0 G120 B215<br>
+                                    Hex #0078D7<br>
+                                    C100 M30 Y0 K0<br>
+                                    PMS 3005
+                                </p>
+                            </div>
+                        </div>
+                        <div class="thirds">
+                            <div class="single">
+                                <span class="swatch" style="background: #e6e6e6;">Aa</span>
+                                <p>Light Gray</p>
+                                <p class="upper">
+                                    R230 G230 B230<br>
+                                    Hex #E6E6E6<br>
+                                    C0 M0 Y0 K10<br>
+                                    PMS Cool Gray 1
+                                </p>
+                            </div>
+                            <div class="single">
+                                <span class="swatch" style="background: #d2d2d2;">Aa</span>
+                                <p>Gray</p>
+                                <p class="upper">
+                                    R210 G210 B210<br>
+                                    Hex #D2D2D2<br>
+                                    C0 M0 Y0 K20<br>
+                                    PMS Cool Gray 3
+                                </p>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="row"></div>
+                    <div class="row">
+                        <div class="thirds">
+                            <div class="single">
+                                <span class="swatch white" style="background: #e81123;">Aa</span>
+                                <p>Red</p>
+                                <p class="upper">
+                                    R232 G17 B35<br>
+                                    Hex #E81123<br>
+                                    C0 M100 Y100 K0<br>
+                                    PMS 185
+                                </p>
+                            </div>
+                            <div class="single">
+                                <span class="swatch white" style="background: #b4009e;">Aa</span>
+                                <p>Magenta</p>
+                                <p class="upper">
+                                    R180 G0 B158<br>
+                                    Hex #B4009E<br>
+                                    C25 M100 Y0 K0<br>
+                                    PMS 241
+                                </p>
+                            </div>
+                            <div class="single">
+                                <span class="swatch white" style="background: #5c2d91;">Aa</span>
+                                <p>Purple</p>
+                                <p class="upper">
+                                    R92 G45 B145<br>
+                                    Hex #5C2D91<br>
+                                    C80 M100 Y0 K0<br>
+                                    PMS 268
+                                </p>
+                            </div>
+                        </div>
+                        <div class="thirds">
+                            <div class="single">
+                                <span class="swatch white" style="background: #008272;">Aa</span>
+                                <p>Teal</p>
+                                <p class="upper">
+                                    R0 G130 B114<br>
+                                    Hex #008272<br>
+                                    C100 M0 Y50 K25<br>
+                                    PMS 3295
+                                </p>
+                            </div>
+                            <div class="single">
+                                <span class="swatch white" style="background: #737373;">Aa</span>
+                                <p>Mid Gray</p>
+                                <p class="upper">
+                                    R115 G115 B115<br>
+                                    Hex #737373<br>
+                                    C0 M0 Y0 K65<br>
+                                    PMS Cool Gray 9
+                                </p>
+                            </div>
+                            <div class="single">
+                                <span class="swatch white" style="background: #505050;">Aa</span>
+                                <p>Dark Gray</p>
+                                <p class="upper">
+                                    R80 G80 B80<br>
+                                    Hex #505050<br>
+                                    C0 M0 Y0 K80<br>
+                                    PMS Cool Gray 11
+                                </p>
+                            </div>
+                        </div>
+                    </div>
                 </div>
             </section>
             <section id="section-5-4">
