fixed color grid

--- a/index.html
+++ b/index.html
@@ -1702,7 +1702,7 @@
                     </div>
                     <div class="row">
                         <div class="half">
-                            <div class="half">
+                            <div>
                                 <span class="swatch" style="background: #ffb900;">Aa</span>
                                 <p>Yellow</p>
                                 <p class="upper">
@@ -1712,7 +1712,7 @@
                                     PMS 124 C, 7406 U
                                 </p>
                             </div>
-                            <div class="half">
+                            <div>
                                 <span class="swatch white" style="background: #d83b01;">Aa</span>
                                 <p>Orange</p>
                                 <p class="upper">
@@ -1723,31 +1723,7 @@
                                 </p>
                             </div>
                         </div>
-                        <div class="half">
-                            <div class="thirds">
-                                <div class="single">
-                                    <span class="swatch" style="background: #ffffff;">Aa</span>
-                                    <p>White</p>
-                                    <p class="upper">
-                                            R255 G255 B255<br>
-                                            Hex #FFFFFF<br>
-                                            C0 M0 Y0 K0
-                                    </p>
-                                </div>
-                            </div>
-                            <div class="thirds">
-                                <div class="single">
-                                    <span class="swatch white" style="background: #000000;">Aa</span>
-                                    <p>Rich Black</p>
-                                    <p class="upper">
-                                        R0 G0 B0<br>
-                                        Hex #000000<br>
-                                        C33 M33 Y33 K100
-                                    </p>
-                                </div>
-                            </div>
-                        </div>
-                        <!-- <div class="thirds">
+                        <div class="thirds">
                             <div class="single">
                                 <span class="swatch" style="background: #ffffff;">Aa</span>
                                 <p>White</p>
@@ -1766,12 +1742,12 @@
                                     C33 M33 Y33 K100
                                 </p>
                             </div>
-                        </div> -->
+                        </div>
                     </div>
                     <div class="row"></div>
                     <div class="row">
                         <div class="half">
-                            <div class="half">
+                            <div>
                                 <span class="swatch white" style="background: #107c10;">Aa</span>
                                 <p>Green</p>
                                 <p class="upper">
@@ -1781,7 +1757,7 @@
                                     PMS 362
                                 </p>
                             </div>
-                            <div class="half">
+                            <div>
                                 <span class="swatch white" style="background: #0078d7;">Aa</span>
                                 <p>Blue</p>
                                 <p class="upper">
