working on font grid

--- a/index.html
+++ b/index.html
@@ -1700,6 +1700,10 @@
                     <div class="row">
                         <h5 class="heavy">Microsoft is a colorful brand. Our brand colors are our preferred range. Using this palette builds familiarity and recognition. White, black, and gray are preferred for text and backgrounds. Don't sample or use the automated color conversion tools in your software. Each color has been optimized for on-screen (RGB or hex) or print reproduction (CMYK or PMS). Specify the exact color formulas for accurate reproduction.</h5>
                     </div>
+
+                    <!-- spacing -->
+                    <div class="row"></div>
+                    
                     <div class="row">
                         <div class="half">
                             <div>
@@ -1723,7 +1727,7 @@
                                 </p>
                             </div>
                         </div>
-                        <div class="thirds">
+                        <div class="subs">
                             <div class="single">
                                 <span class="swatch" style="background: #ffffff;">Aa</span>
                                 <p>White</p>
@@ -1768,7 +1772,7 @@
                                 </p>
                             </div>
                         </div>
-                        <div class="thirds">
+                        <div class="subs">
                             <div class="single">
                                 <span class="swatch" style="background: #e6e6e6;">Aa</span>
                                 <p>Light Gray</p>
@@ -1793,7 +1797,7 @@
                     </div>
                     <div class="row"></div>
                     <div class="row">
-                        <div class="thirds">
+                        <div class="subs">
                             <div class="single">
                                 <span class="swatch white" style="background: #e81123;">Aa</span>
                                 <p>Red</p>
@@ -1825,7 +1829,7 @@
                                 </p>
                             </div>
                         </div>
-                        <div class="thirds">
+                        <div class="subs">
                             <div class="single">
                                 <span class="swatch white" style="background: #008272;">Aa</span>
                                 <p>Teal</p>
@@ -1858,6 +1862,51 @@
                             </div>
                         </div>
                     </div>
+
+                    <!-- spacing -->
+                    <div class="row"></div>
+                    <div class="row"></div>
+
+                    <div class="row">
+                        <h4>How to apply color</h4>
+                    </div>
+                    <div class="row">
+                        <h5 class="heavy">
+                            Color is used for product identification, to create emphasis, or simply to give meaning to our design. Apply these principles to use color in a contextual way that's both impactful and purposeful. 
+                        </h5>
+                    </div>
+                    <div class="row">
+                        <div class="thirds">
+                            <p class="title">Choose a primary brand color</p>
+                            <p>Make sure a brand color is the primary color in the composition. If your project is for a specific product or service, use its associated color prominently. </p>
+                        </div>
+                        <div class="thirds">
+                            <p class="title">Limit your color palette </p>
+                            <p>We are colorful, but we are not technicolor. Limit your color palette to a few well-chosen colors. In most cases, less is more. </p>
+                        </div>
+                        <div class="thirds">
+                            <p class="title">Use our accent palette</p>
+                            <p>Our brand colors are complimented with a range of accents and shades. Use them sparingly and in ways that don't compete with the core colors. </p>
+                        </div>
+                    </div>
+                    <div class="row">
+                        <div class="thirds">
+                            <p class="title">Check the formulas</p>
+                            <p>Each color has been optimized for on-screen (RGB or hex) or print reproduction (CMYK or PMS). Specify the exact color formulas for accurate reproduction.</p>
+                        </div>
+                        <div class="thirds">
+                            <p class="title">Keep combinations simple</p>
+                            <p>Using our brand and accent color palettes, create analogous color groups. Start by choosing a core brand color, then add neutrals or select other colors that complement.</p>
+                        </div>
+                        <div class="thirds">
+                            <p class="title">Text on images</p>
+                            <p>To make sure that people of all abilities can access and understand our communications, we pick colors carefully. Choose color combinations with a minimum contrast ratio of 4.5:1.</p>
+                        </div>
+                    </div>
+
+                    <div class="row"><a href="#" class="full">MAS pre-filtered web accessibility guidelines </a></div>
+                    <div class="row"><a href="#" class="full">See the full Microsoft accessibilty standards  </a></div>
+
                 </div>
             </section>
             <section id="section-5-4">
@@ -1869,7 +1918,76 @@
                         <h4>We have a beautiful typeface, Segoe (Pro, UI, and Display)  </h4>
                     </div>
                     <div class="row">
-                        <h5>The Microsoft brand typeface, Segoe, expresses our clean, human, and versatile nature in a visual way. Segoe is an essential and long-standing element of our brand identity. </h5>
+                        <h5 class="heavy">The Microsoft brand typeface, Segoe, expresses our clean, human, and versatile nature in a visual way. Segoe is an essential and long-standing element of our brand identity. </h5>
+                    </div>
+                    <div class="row">
+                        <div class="thirds">
+                            <p class="title">Use the right Segoe typeface </p>
+                            <p>The Segoe type family includes Segoe UI and Segoe Pro. Segoe UI is for on-screen and digital executions. Segoe Pro is for print. </p>
+                        </div>
+                        <div class="thirds">
+                            <p class="title">Keep it simple</p>
+                            <p>Approach typography with a focus on simplicity and efficiency. Limit type to no more than three sizes or weights. </p>
+                        </div>
+                        <div class="thirds">
+                            <p class="title">Follow the font ramp </p>
+                            <p>To help users understand content easily, use this font ramp. It establishes crucial relationships between the type styles on the page. </p>
+                        </div>
+                    </div>
+                    <div class="row">
+                        <div class="thirds">
+                            <p class="title">Align left</p>
+                            <p>We recommend that visual elements and columns of type be left-aligned. In most instances, this flush-left and ragged-right approach provides consistent anchoring of the content and a uniform layout.</p>
+                        </div>
+                        <div class="thirds">
+                            <p class="title">Use sentence case</p>
+                            <p>Sentence case is our standard for all communications. Use all-uppercase sparingly for titles, short headings, or subheadings—and never for full paragraphs. </p>
+                        </div>
+                    </div>
+                    <div class="row">
+                        <div class="single"><h4>Segoe</h4></div>
+                        <div class="single"><p><span class="title">Digital usage</span><br>Segoe UI</p></div>
+                        <div class="single"><p><span class="title">Print usage</span><br>Segoe UI Pro</p></div>
+                    </div>
+
+                    <!-- spacing -->
+                    <div class="row"></div>
+
+                    <div class="gray table-row">
+                        <div class="first">Font size</div>
+                        <div class="second">20pt and below</div>
+                        <div class="third">21 to 33pt</div>
+                        <div class="fourth">34pt and above</div>
+                    </div>
+                    <div class="table-row">
+                        <div class="first">Use this for </div>
+                        <div class="second">Body copy, descriptors and subheads</div>
+                        <div class="third">21 to 33pt</div>
+                        <div class="fourth">34pt and above</div>
+                    </div>
+                    <div class="table-row">
+                        <div class="first">Recommended individual font weights</div>
+                        <div class="second">Regular<br>Semibold<br>Bold</div>
+                        <div class="third">Semilight<br>Regular<br>Semibold</div>
+                        <div class="fourth">Light</div>
+                    </div>
+                    <div class="table-row">
+                        <div class="first">Specifications</div>
+                        <div class="second">Leading 120%<br>Tracking 0<br>Kerning Metric</div>
+                        <div class="third">Leading 110% <br> Tracking -15<br> Kerning Metric</div>
+                        <div class="fourth">Leading 100% <br> Tracking -15<br> Kerning Metric</div>
+                    </div>
+                    <div class="table-row">
+                        <div class="first">Type ramp relationship</div>
+                        <div class="second">Subheads are the same size as body copy</div>
+                        <div class="third">Small headlines are 1-2x the size subheads of body copy</div>
+                        <div class="fourth">Headlines are 2-3x the size of subheads or body copy</div>
+                    </div>
+                    <div class="table-row">
+                        <div class="first">Recommended same size pairing font weights</div>
+                        <div class="second">Bold<br>Regular</div>
+                        <div class="third">Bold <br> Semilight</div>
+                        <div class="fourth">Bold<br>Light</div>
                     </div>
                 </div>
             </section>
