--- a/index.html
+++ b/index.html
@@ -29,9 +29,9 @@
                 Menu
             </button>
             <ul id="menu-list">
-                <li role="menuitem" class="">
+                <li role="menuitem" class="active">
                     <a class="purple" href="#section-1">Welcome</a>
-                    <ul class="sub-nav__item">
+                    <ul class="sub-nav">
                         <li role="menuitem" class="sub-nav__item">
                             <a class="purple" href="#section-1-1">What's new</a>
                         </li>
