adding classes for nav function

--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
             </button>
             <ul id="menu-list">
                 <li role="menuitem" class="active">
-                    <a class="purple" href="#section-1">Welcome</a>
+                    <a class="purple active" href="#section-1">Welcome</a>
                     <ul class="sub-nav">
                         <li role="menuitem" class="sub-nav__item">
                             <a class="purple" href="#section-1-1">What's new</a>
@@ -1350,7 +1350,7 @@
                           
                         </div>
                         <div class="thirds">
-                            <img src="assets/approved-store-tile-da.png" alt="Microsoft Store dark icon">
+                            <img src="assets/approved-store-tile-dark.png" alt="Microsoft Store dark icon">
                             
                         </div>
                     </div>
@@ -2564,6 +2564,11 @@
 
         <!-- JavaScript requirements -->
         <!-- Include before </body>. Use the script file based on preference (UMD, AMD, CommonJS, Auto, etc.) -->
+        <script
+        src="http://code.jquery.com/jquery-3.3.1.min.js"
+        integrity="sha256-FgpCb/KJQlLNfOu91ta32o/NMZxltwRo8QtmkMRdAu8="
+        crossorigin="anonymous"></script>
+
         <script async="async" src="main.js"></script>
         <noscript></noscript>
 
