google optimized image assets

--- a/index.html
+++ b/index.html
@@ -609,7 +609,9 @@
             </section>
             <section id="section-3" class="small">
                 <div class="wrapper">
-                    <h3>How we tell our story</h3>
+                    <div class="row">
+                        <h3>How we tell our story</h3>
+                    </div>
                 </div>
             </section>
             <section id="section-3-1">
