--- a/index.html
+++ b/index.html
@@ -1294,7 +1294,7 @@
 			</section>
 			<section id="section-4-5">
 				<div class="wrapper">
-					<span class="badge orange">Microsof symbol</span>
+					<span class="badge orange">Microsoft symbol</span>
 					<div  class="row">
                         <h4>We use the Microsoft symbol very restrictively</h4>
                     </div>
